# Graphics441

./: README.md
project1A/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1A.cxx
project1A/project1A.app/Contents/: Info.plist
project1A/project1A.app/Contents/MacOS/: project1A
project1B/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1B.cxx
project1B/project1B.app/Contents/: Info.plist
project1B/project1B.app/Contents/MacOS/: project1B
project1C/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  get_triangles.cxx  project1C.cxx
project1C/project1C.app/Contents/: Info.plist
project1C/project1C.app/Contents/MacOS/: project1C
project1D/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output.txt  project1D.cxx  project1Dtest.cxx
project1D/project1D.app/Contents/: Info.plist
project1D/project1D.app/Contents/MacOS/: project1D
project1E/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output.txt  project1E.cxx  reader1e.cxx  shading.cxx
project1E/project1E.app/Contents/: Info.plist
project1E/project1E.app/Contents/MacOS/: project1E
